[package]
name = "clang_log"
description = "Another log implementation"
license = "MIT"
version = "2.1.1"
edition = "2021"
authors = ["DDAN"]
rust-version = "1.80.0"
documentation = "https://docs.rs/clang_log"
readme = "README.md"
repository = "https://github.com/DDAN-17/clang_log"
keywords = ["clang", "log", "logging", "logger", "llvm"]
categories = ["development-tools::debugging"]

[dependencies]
colored = "3.0.0"
log = { version = "0.4.27", features = ["std"] }
